--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,10 +330,10 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 75vh;
-  background: url("../img/hero-bg.jpg") top center;
+  height: 60vh;
+  background: url("../img/bg5.jpg") top center;
   background-size: cover;
-  padding: 0 15px;
+  padding: 0px;
 }
 
 #hero h1 {
