--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 60vh;
-  background: url("../img/bg5.jpg") top center;
+  background: url("../img/london.jpg") top center;
   background-size: cover;
   padding: 0px;
 }
