--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,8 +330,8 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 60vh;
-  background: url("../img/london.jpg") top center;
+  height: 80vh;
+  background: url("../img/bg_kingscross5.jpg") top center;
   background-size: cover;
   padding: 0px;
 }
